force-app/main/default/objects/Booking__c/fields/SDR_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>SDR_Paid_By__c</fullName>
    <label>SDR Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
                <default>true</default>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>