force-app/main/default/objects/Booking__c/fields/Stamp_Duty_Value__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Value__c</fullName>
    <label>Stamp Duty Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>