force-app/main/default/objects/Booking__c/fields/TDS_Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>TDS_Expected_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDS Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>