force-app/main/default/objects/Booking__c/fields/TDS_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>TDS_Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDS Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>