force-app/main/default/objects/Booking__c/fields/Total_Loan_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Loan Amount Paid (Till Date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>