force-app/main/default/objects/Booking__c/fields/Total_OCR_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_OCR_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total OCR Paid (Till Date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>