force-app/main/default/objects/Booking__c/fields/Total_Remaining_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Loan_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Remaining Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>